log
ju., 21 de abr. de 2022 15:43:14: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tM -> root = lower_than;
                ^
treemap.c:43:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tM -> current = lower_than;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
b1fc42d
